# SoccerGURU-BE

./: .env.example  README.md  makefile  pyproject.toml  requirements.txt
adapters/repositories/llm_repository/: llm_adapter.py  open_ai_assistant_adapter.py
adapters/repositories/llm_repository/services/: assistant_service.py
adapters/repositories/soccer_api_repository/: __init__.py  soccer_api_adapter.py
adapters/repositories/soccer_api_repository/services/: __init__.py  rapidapi_service.py
api/: main.py
api/src/dtos/: __init__.py  prediction.py
api/src/routers/: __init__.py  leagues.py  predictions.py
config/: __init__.py  constants.py  env_variables.py
core/src/repositories/: __init__.py  llm_repository.py  soccer_api_repository.py
core/src/use_cases/: __init__.py  create_llm_prediction.py  get_llm_prediction.py  get_upcoming_matches.py
core/src/use_cases/response/: __init__.py  get_upcoming_matches_response.py
factories/repositories/: __init__.py  llm.py  soccer_api.py
factories/use_cases/: __init__.py  get_llm_prediction.py  get_upcoming_matches.py
