[project]
name = "soccerguru"
version = "0.1.0"
description = ""
authors = [
    {name = "David Cadena", email = "david.cadena@hotmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai (>=1.60.0,<2.0.0)",
    "fastapi[standard] (>=0.115.7,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
